welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not enough arguments for constructor Array: (_length: Int)Array[Int].
Unspecified value parameter _length.
  var a= new Array[Int]
         ^